# Lecture-Tools

./: .dockerignore  .gitignore  .npmrc  Dockerfile  LICENSE  README.md  audio_mastering.bat  docker-compose.yml  launcher.bat  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements-dev.txt  run.py  start.bat  start.sh  tailwind.config.ts  tsconfig.base.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
app/: bootstrap.py  config.py  logging_utils.py
app/processing/: __init__.py  audio.py  recording.py  slides.py
app/services/: audio_conversion.py  events.py  ingestion.py  naming.py  progress.py  settings.py  storage.py
app/ui/: console.py  desktop.py  modern.py  overview.py
app/web/: __init__.py  server.py
app/web/static/i18n/: en.json  es.json  fr.json  zh.json
app/web/templates/: index.html
apps/gui/: .eslintrc.cjs  index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/gui/src/: env.d.ts  main.tsx  router.tsx
config/: default.json
config/systemd/: lecture-tools.service
docs/: api_ui_audit.md  debian-manual-install.md  design-system.md  logical-structure.md
scripts/: docker-install.sh  install_server.sh  remove_server.sh  remove_server_full.sh
tests/: conftest.py  test_bootstrap.py  test_cli_mastering.py  test_config.py  test_debug_log_handler.py  test_ingestion.py  test_recording.py  test_repository.py  test_run.py  test_slides_processing.py  test_web_api.py
(+81 files in other folders)
