[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[project]
name = "lecture-tools"
version = "0.1.0"
description = "Prototype scaffolding for the Lecture Tools application"
requires-python = ">=3.11"
dependencies = [
    "typer==0.12.5",
    "click==8.1.7",
    "Pillow>=10.0",
    "PyMuPDF>=1.23",
    "faster-whisper>=0.10",
    "numpy>=1.26,<2",
    "sounddevice>=0.4",
    "rich>=13.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "mutagen>=1.47",
    "easyocr>=1.7",
    "paddleocr>=2.7",
    "paddlepaddle>=2.6",
    "pytesseract>=0.3.10",
]
